@@ -4,6 +4,7 @@ x2goclient (4.0.3.2-0x2go1) UNRELEASED; urgency=medium
   * New upstream release (4.0.3.2):
     - Reformat onmainwindow.cpp
     - Fix placement of session folders in session card column. (Fixes: #681).
+    - Send empty message in x2gohelper to stop AppStarting cursor. (Fixes: #525).
 
   [ Mike Gabriel ]
   * New upstream release (4.0.3.2):
